# wsl_repo

ESP32/Example 1/: joystick.ino
ESP32/joystick/: CMakeLists.txt
ESP32/joystick/main/: CMakeLists.txt  component.mk  joystick.c
ESP32/joystick/main/ulp/: ulpcode.S
c++/socket/: socket_server.cpp  socket_udp  socket_udp.cpp
python/: main_code.py
python/modules/: __init__.py  module3.py
